--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,7 @@ Imports:
     SummarizedExperiment,
     VennDiagram
 LazyData: true
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
