--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/DijkJel/DIANNmv
 BugReports: https://github.com/DijkJel/DIANNmv/issues
+biocViews:
 Imports: 
     DEP,
     ggplot2,
