--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,12 @@ export(add_median_peptide_intensity)
 export(add_peptide_numbers)
 export(add_standardTheme)
 export(get_DEPresults)
+export(get_genesets)
 export(get_median_intensities_prMatrix)
 export(get_nPep_prMatrix)
+export(get_ranked_genes)
+export(load_msigdb)
+export(perform_GSEA)
 export(plotVolcano)
 export(plot_DEP_barplot)
 export(plot_MA)
@@ -18,10 +22,13 @@ export(prepare_volcano_data)
 export(recode_sig_col)
 export(summarize_peptide_intensities)
 import(DEP)
+import(GSEABase)
 import(SummarizedExperiment)
 import(VennDiagram)
+import(fgsea)
 import(ggplot2)
 import(ggrepel)
 import(grid)
+import(msigdb)
 import(reshape2)
 import(stats)
