--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ URL: https://github.com/DijkJel/DIANNmv
 BugReports: https://github.com/DijkJel/DIANNmv/issues
 biocViews:
 Imports: 
+    cleaver,
     DEP,
     fgsea,
     ggplot2,
@@ -20,10 +21,13 @@ Imports:
     GSEABase,
     msigdb,
     reshape2,
+    seqinr,
     stats,
+    stringr,
     SummarizedExperiment,
     VennDiagram
 LazyData: true
+LazyDataCompression:xz
 Suggests: 
     knitr,
     rmarkdown
