--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(perform_GSEA)
 export(plotVolcano)
 export(plot_DEP_barplot)
 export(plot_MA)
+export(plot_upset)
 export(plot_venn_diagram)
 export(prepare_MA_data)
 export(prepare_barplot_data)
@@ -33,6 +34,7 @@ import(cleaver)
 import(fgsea)
 import(ggplot2)
 import(ggrepel)
+import(ggupset)
 import(grid)
 import(msigdb)
 import(reshape2)
