added mixed imputation made prepare_se more dummy-proof

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(add_median_peptide_intensity)
 export(add_peptide_numbers)
 export(add_standardTheme)
 export(calculate_iBAQ)
+export(create_imputation_mask)
 export(get_DEPresults)
+export(get_detection_limit)
 export(get_genesets)
 export(get_ibaq_peptides)
 export(get_intensities_prMatrix)
@@ -14,7 +16,10 @@ export(get_median_intensities_prMatrix)
 export(get_nPep_prMatrix)
 export(get_ranked_genes)
 export(load_msigdb)
+export(mixed_imputation)
+export(mixed_imputation_matrix)
 export(perform_GSEA)
+export(perform_mixed_imputation)
 export(plotVolcano)
 export(plot_DEP_barplot)
 export(plot_MA)
@@ -28,6 +33,7 @@ export(recode_sig_col)
 export(summarize_peptide_intensities)
 import(DEP)
 import(GSEABase)
+import(MsCoreUtils)
 import(SummarizedExperiment)
 import(VennDiagram)
 import(cleaver)
