Updated prepare_se() and added GSEA plotting.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,15 @@ export(perform_mixed_imputation)
 export(plotVolcano)
 export(plot_DEP_barplot)
 export(plot_MA)
+export(plot_gsea_barplot)
+export(plot_gsea_bubbleplot)
+export(plot_gsea_dotplot)
+export(plot_gsea_volcano)
 export(plot_upset)
 export(plot_venn_diagram)
 export(prepare_MA_data)
 export(prepare_barplot_data)
+export(prepare_gsea_data)
 export(prepare_se)
 export(prepare_volcano_data)
 export(recode_sig_col)
