--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/DijkJel/DIANNmv
+URL: https://github.com/DijkJel/DIANNmv, https://dijkjel.github.io/DIANNmv/
 BugReports: https://github.com/DijkJel/DIANNmv/issues
 biocViews:
 Imports: 
