debugged gsea functions and added protein coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_ibaq_peptides)
 export(get_intensities_prMatrix)
 export(get_median_intensities_prMatrix)
 export(get_nPep_prMatrix)
+export(get_peptide_position_in_protein)
 export(get_ranked_genes)
 export(load_msigdb)
 export(mixed_imputation)
@@ -28,11 +29,13 @@ export(plot_gsea_barplot)
 export(plot_gsea_bubbleplot)
 export(plot_gsea_dotplot)
 export(plot_gsea_volcano)
+export(plot_protein_coverage)
 export(plot_upset)
 export(plot_venn_diagram)
 export(prepare_MA_data)
 export(prepare_barplot_data)
 export(prepare_gsea_data)
+export(prepare_peptide_data)
 export(prepare_se)
 export(prepare_volcano_data)
 export(recode_sig_col)
@@ -48,6 +51,7 @@ import(ggplot2)
 import(ggrepel)
 import(ggupset)
 import(grid)
+import(ivs)
 import(msigdb)
 import(reshape2)
 import(seqinr)
