Add automatic parsing of expDesign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,12 +34,14 @@ export(plot_upset)
 export(plot_venn_diagram)
 export(prepare_MA_data)
 export(prepare_barplot_data)
+export(prepare_diann_data)
 export(prepare_gsea_data)
 export(prepare_peptide_data)
 export(prepare_se)
 export(prepare_volcano_data)
 export(recode_sig_col)
 export(summarize_peptide_intensities)
+export(use_dep)
 import(DEP)
 import(GSEABase)
 import(MsCoreUtils)
