Check() runs good

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(use_dep)
 import(DEP)
 import(GSEABase)
 import(MsCoreUtils)
+import(S4Vectors)
 import(SummarizedExperiment)
 import(VennDiagram)
 import(cleaver)
