Added remove cRAP if remove_contaminants == TRUE in prepare_se()
Changed min_pep parameter in prepare_se(). min_pep now uses greater than or equal, instead of greater than. Updated vignette accordingly.

In prepare_se(), changed se names (se and se_filt, to se_after_normalization and se_before_normalization) to make normalization plot more intuitive.

In prepare_se(), added imputation_mask as assay in se.

Changed get_DEPresults(), prepare_volcano_data() and plotVolcano() to indicate if values were imputed.

Updated prepare_diann_data() to always use the last common identifier as start of sample name.

In prepare_se(), use gene names as rownames (after make.unique) for the metadata pr_matrix, so that they match the rownames of the se.

For gsea_plots, corrected prepare_gsea_data with the order of break_names and max_name_length parameters & fixed bug in plot_gsea_bubble call to prepare_gsea_data.

In plot_protein_coverage, added extra parameter to change the order of the conditions when plotted & use use rownames(se) as identifiers instead of gene names (for consistency with other plots).

In gsea_plots.R, added function for plotting individual enrichment plots (plot_gsea_enrichment_plot())

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(plot_MA)
 export(plot_gsea_barplot)
 export(plot_gsea_bubbleplot)
 export(plot_gsea_dotplot)
+export(plot_gsea_enrichment_plot)
 export(plot_gsea_volcano)
 export(plot_protein_coverage)
 export(plot_upset)
