--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: DIANNmv
 Title: For analysis and visualization of DIANN MS-data
 Version: 1.2.0
 Authors@R: 
-    person("Jelmer", "Dijkstra", , "j.dijkstra@nki.nl", role = "aut")
+    person("Jelmer", "Dijkstra", , "j.dijkstra@nki.nl", role = c("aut", "cre"))
 Description: R package for the analysis and visualization of mass spectrometry proteomics data.
 License: MIT + file LICENSE
 Encoding: UTF-8
